@@ -1,3 +1,8 @@
+2000-08-29  Dave Brolley  <brolley@redhat.com>
+
+	* utils-gen.scm (gen-ifld-extract): Pass total-len if
+	adata-integral-insn is true for this architecture.
+
 2000-08-24  Frank Ch. Eigler  <fche@redhat.com>
 
 	* hardware.scm (<hw-immediate> get-index-mode): Define method.
